docs(content): adiciona anotações swagger e cenários de teste no rest.http
